Here's the commented version of the code:

```c++
# Copyright 2020 The gRPC Authors

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.
"""The Python example of utilizing wait-for-ready flag."""

import asyncio
from contextlib import contextmanager
import logging
import socket
from typing import Iterable

import grpc

# Load protobuf definitions and gRPC services from helloworld.proto
helloworld_pb2, helloworld_pb2_grpc = grpc.protos_and_services(
    "helloworld.proto"
)

# Initialize logger for the module
_LOGGER = logging.getLogger(__name__)
_LOGGER.setLevel(logging.INFO)

@contextmanager
def get_free_loopback_tcp_port() -> Iterable[str]:
    """Context manager that finds and yields a free localhost TCP port.
    
    Creates a temporary socket to find an available port, yields it,
    and ensures proper cleanup. Supports both IPv4 and IPv6.
    """
    if socket.has_ipv6:
        tcp_socket = socket.socket(socket.AF_INET6)
    else:
        tcp_socket = socket.socket(socket.AF_INET)
    tcp_socket.bind(("", 0))
    address_tuple = tcp_socket.getsockname()
    yield f"localhost:{address_tuple[1]}"
    tcp_socket.close()

class Greeter(helloworld_pb2_grpc.GreeterServicer):
    """Implementation of the gRPC Greeter service."""
    
    async def SayHello(
        self, request: helloworld_pb2.HelloRequest, unused_context
    ) -> helloworld_pb2.HelloReply:
        """Implementation of the SayHello RPC method.
        
        Args:
            request: Contains the name parameter from the client
            unused_context: gRPC context (unused in this example)
            
        Returns:
            A HelloReply message with a greeting containing the client's name
        """
        return helloworld_pb2.HelloReply(message=f"Hello, {request.name}!")

def create_server(server_address: str):
    """Creates and configures a gRPC server with Greeter service.
    
    Args:
        server_address: The address to bind the server to
        
    Returns:
        Configured gRPC server instance
    """
    server = grpc.aio.server()
    helloworld_pb2_grpc.add_GreeterServicer_to_server(Greeter(), server)
    bound_port = server.add_insecure_port(server_address)
    assert bound_port == int(server_address.split(":")[-1])
    return server

async def process(
    stub: helloworld_pb2_grpc.GreeterStub, wait_for_ready: bool = None
) -> None:
    """Makes a gRPC call and handles the response based on wait_for_ready setting.
    
    Args:
        stub: The gRPC client stub
        wait_for_ready: Whether to wait for server to become available
        
    Logs the result of the RPC call and verifies expected behavior based
    on the wait_for_ready parameter.
    """
    try:
        response = await stub.SayHello(
            helloworld_pb2.HelloRequest(name="you"),
            wait_for_ready=wait_for_ready,
        )
        message = response.message
    except grpc.aio.AioRpcError as rpc_error:
        assert rpc_error.code() == grpc.StatusCode.UNAVAILABLE
        assert not wait_for_ready
        message = rpc_error
    else:
        assert wait_for_ready
    _LOGGER.info(
        "Wait-for-ready %s, client received: %s",
        "enabled" if wait_for_ready else "disabled",
        message,
    )

async def main() -> None:
    """Main demonstration of wait-for-ready functionality.
    
    1. Creates a server address using a free port
    2. Creates a channel and stub before server is running
    3. Makes two RPC calls with different wait_for_ready settings
    4. Starts the server after initial connection attempts
    5. Verifies behavior of both RPC calls
    """
    with get_free_loopback_tcp_port() as server_address:
        # Create channel to server that isn't running yet
        channel = grpc.aio.insecure_channel(server_address)
        stub = helloworld_pb2_grpc.GreeterStub(channel)

        # Create tasks with different wait_for_ready settings
        fail_fast_task = asyncio.get_event_loop().create_task(
            process(stub, wait_for_ready=False)
        )

        wait_for_ready_task = asyncio.get_event_loop().create_task(
            process(stub, wait_for_ready=True)
        )

    # Wait for channel to reach transient failure state
    state = channel.get_state()
    while state != grpc.ChannelConnectivity.TRANSIENT_FAILURE:
        await channel.wait_for_state_change(state)
        state = channel.get_state()

    # Now start the server
    server = create_server(server_address)
    await server.start()

    # Wait for both RPC calls to complete
    await fail_fast_task
    await wait_for_ready_task

    # Cleanup
    await server.stop(None)
    await channel.close()

if __name__ == "__main__":
    logging.basicConfig(level=logging.INFO)
    asyncio.get_event_loop().run_until_complete(main())
```